rust/src/methods/encode/snapshots/html_fragments@image.html.snap
---
source: rust/src/methods/encode/html.rs
expression: encoded
input_file: fixtures/fragments/html/image.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p slot="0" itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">
        <span slot="0">An image</span>
        <img slot="1" itemtype="https://schema.org/ImageObject" itemscope  src="image.png"/>
        <span slot="2">.</span>
      </span>
    </p>
    <p slot="1" itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">
        <span slot="0">An image with a title</span>
        <img slot="1" itemtype="https://schema.org/ImageObject" itemscope  src="image.png"/>
        <span slot="2">.</span>
      </span>
    </p>
  </div>
</article>
