rust/src/methods/encode/snapshots/html_fragments@link.html.snap
---
source: rust/src/methods/encode/html.rs
expression: encoded
input_file: fixtures/fragments/html/link.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p slot="0" itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">
        <span slot="0">A</span>
        <a slot="1" itemtype="https://stenci.la/Link" itemscope  href="https://stenci.la">
          <span slot="0">link</span>
        </a>
        <span slot="2">.</span>
      </span>
    </p>
    <p slot="1" itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">
        <span slot="0">A</span>
        <a slot="1" itemtype="https://stenci.la/Link" itemscope  href="">
          <span slot="0">link</span>
        </a>
        <span slot="2">with no target or title.</span>
      </span>
    </p>
    <p slot="2" itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">
        <span slot="0">A</span>
        <a slot="1" itemtype="https://stenci.la/Link" itemscope  href="https://stenci.la">
          <span slot="0">link</span>
        </a>
        <span slot="2">with no title.</span>
      </span>
    </p>
  </div>
</article>
