rust/src/methods/encode/snapshots/html_fragments@paragraph.html.snap
---
source: rust/src/methods/encode/html.rs
expression: encoded
input_file: fixtures/fragments/html/paragraph.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p slot="0" itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">
        <span slot="0">First paragraph.</span>
      </span>
    </p>
    <p slot="1" itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">
        <span slot="0">Second paragraph.</span>
      </span>
    </p>
    <p slot="2" itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">
        <span slot="0">Third paragraph,
split over multiple
lines.</span>
      </span>
    </p>
  </div>
</article>
